# healthbot_captstone

./: .gitignore  README.md
CoppeliaSim/: diffDrive.lua  diffDrivePatht_slam_Test.ttt  diffDrivePatht_with_room.ttt  diffDrivePathttt.ttt  diffDriveSLAM.lua  finalControlCoppelia.lua  openCV_depthmap.py  rosControllerCoppeliaSimDiffDrivettt.ttt
CoppeliaSim/reference_progress/: diffDrive.lua  diffDrivePatht_slam_Test.ttt  diffDrivePatht_with bumps.ttt  diffDrivePathttt.ttt
CoppeliaSim/reference_progress/XmlSave/: t.simscene.xml
Webots/controllers/my_controller/: my_controller.py
Webots/worlds/: .diff_drive.wbproj  diff_drive.wbt
arduino/: motorController.ino
src/: camera.yaml
src/capstone/: CMakeLists.txt  package.xml
src/coppelia_ros_node/: CMakeLists.txt  package.xml
src/coppelia_ros_node/src/: video_sub.py
src/healthbot/: CMakeLists.txt  package.xml
src/healthbot/config/: diff_drive.yaml  healthbot_control.yaml  rviz_config.rviz  rviz_diff_drive.rviz
src/healthbot/launch/: bot_world.launch  control_simulation.launch  orbslam_pointcloud_to_laser.launch  rviz.launch  sdf_world.launch  urdf_world.launch
src/healthbot/sdf/healthbot/: model.config  model.sdf  motion_script.py
src/healthbot/sdf/my_gripper/: README.md  model.config  simple_gripper.sdf
src/healthbot/sdf/my_robot/: README.md  model.config  model.sdf
src/healthbot/sdf/my_robot/meshes/: model.dae
src/healthbot/sdf/simple_mobile_manipulator/: manipulator.sdf  model.config
src/healthbot/urdf/: gazebo.xacro  hbot_base.xacro  healthbot.xacro  old_hbot_base.xacro  robot_base.xacro  rviz_materials.xacro  transmission.xacro
src/healthbot/worlds/: bot.world
src/monodepth/: README.md  package.xml  rviz_config.rviz
src/monodepth/.gitOriginal/: config  index  packed-refs
src/monodepth/launch/: my_launch.launch
src/monodepth/src/: layers.py  (+1 more)
src/motor_control/: CMakeLists.txt  odom_display.rviz  package.xml
src/orb_slam_2_ros/: CMakeLists.txt
(+39 files in other folders)
